force-app/main/default/objects/Brokerage_Slab__c/Brokerage_Slab__c.object-meta.xml
<CustomObject>
    <label>Brokerage Slab</label>
    <nameField>
        <label>Brokerage Slab Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brokerage Slabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>