force-app/main/default/objects/Brokerage_Slab__c/fields/Additional_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Additional_Brokerage__c</fullName>
    <label>Additional Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>