force-app/main/default/objects/Brokerage_Slab__c/fields/Additional_Brokerage_for_OS_NRI__c.field-meta.xml
<CustomField>
    <fullName>Additional_Brokerage_for_OS_NRI__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additional Brokerage for OS / NRI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>