force-app/main/default/objects/Brokerage_Slab__c/fields/Brokerage_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokerage Scheme</label>
    <referenceTo>Brokerage_Scheme__c</referenceTo>
    <relationshipLabel>Brokerage Slabs</relationshipLabel>
    <relationshipName>Brokerage_Slabs</relationshipName>
    <type>Lookup</type>
</CustomField>