force-app/main/default/objects/Brokerage_Slab__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>