force-app/main/default/objects/Brokerage_Slab__c/fields/Slab_No__c.field-meta.xml
<CustomField>
    <fullName>Slab_No__c</fullName>
    <formula>IF(Name == &apos;Slab 1&apos;, 1,  IF(Name == &apos;Slab 2&apos;, 2,  IF(Name == &apos;Slab 3&apos;, 3, IF(Name == &apos;Slab 4&apos;, 4, IF(Name == &apos;Slab 5&apos;, 5, 
			IF(Name == &apos;Slab 6&apos;, 6, IF(Name == &apos;Slab 7&apos;, 7, IF(Name == &apos;Slab 8&apos;, 8, IF(Name == &apos;Slab 9&apos;, 9, 10))))))) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slab No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>