force-app/main/default/objects/Brokerage_Slab__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>