force-app/main/default/objects/Brokerage_Slab__c/fields/Total_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage__c</fullName>
    <formula>Brokerage_Scheme__r.Base_Brokerage__c +  Additional_Brokerage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>