force-app/main/default/objects/Brokerage_Slab__c/fields/Total_Brokerage_for_Local_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage_for_Local_Bookings__c</fullName>
    <formula>Brokerage_Scheme__r.Base_Brokerage_for_Local_Bookings__c + Additional_Brokerage_for_Local_Bookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Brokerage for Local Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>