force-app/main/default/objects/Brokerage_Slab__c/validationRules/If_both_then_NRI_field_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>If_both_then_NRI_field_not_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(  Brokerage_Scheme__r.Type__c , &quot;Both&quot;) ,  ISNULL( Additional_Brokerage_for_OS_NRI__c ) )</errorConditionFormula>
    <errorMessage>Additional Brokerage For OS/NRI should not be blank</errorMessage>
</ValidationRule>