force-app/main/default/objects/Brokerage_Slab__c/validationRules/If_Both_then_NRI_fields_should_not_be_bl.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Both_then_NRI_fields_should_not_be_bl</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Brokerage_Scheme__r.Type__c ,&quot;Both&quot; ) , ISNULL( Additional_Brokerage_for_Local_Bookings__c ) )</errorConditionFormula>
    <errorMessage>Additional Brokerage for Local Bookings Should not be blank</errorMessage>
</ValidationRule>