force-app/main/default/objects/Brokerage_Slab__c/validationRules/If_scheme_type_local_then_NRI_fields_bla.validationRule-meta.xml
<ValidationRule>
    <fullName>If_scheme_type_local_then_NRI_fields_bla</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(  Brokerage_Scheme__r.Type__c ,&quot;Local&quot; ) , NOT(ISNULL(   Base_Brokerage_for_OS_NRI__c )) , NOT(ISNULL(   Additional_Brokerage_for_OS_NRI__c )) , NOT(ISNULL( Total_Brokerage_for_OS_NRI__c )) )</errorConditionFormula>
    <errorDisplayField>Additional_Brokerage_for_OS_NRI__c</errorDisplayField>
    <errorMessage>Additional Brokerage for OS/NRI Should be blank</errorMessage>
</ValidationRule>