force-app/main/default/objects/Brokerage_Slab__c/validationRules/If_Type_NRI_all_local_fields_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Type_NRI_all_local_fields_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Brokerage_Scheme__r.Type__c ,&quot;NRI&quot; ) , NOT(ISNULL( Base_Brokerage_for_Local_Bookings__c )) , NOT(ISNULL(  Additional_Brokerage_for_Local_Bookings__c )) , NOT(ISNULL(  Total_Brokerage_for_Local_Bookings__c )))</errorConditionFormula>
    <errorDisplayField>Additional_Brokerage_for_Local_Bookings__c</errorDisplayField>
    <errorMessage>Additional Brokerage for Local Bookings should be blank.</errorMessage>
</ValidationRule>